--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "A portfolio website showcasing my experience, projects, and skills as a Software Engineer.",
     "scripts": {
+        "clean": "rimraf .parcel-cache dist",
         "build": "parcel build src/index.html --dist-dir dist --no-source-maps",
         "start": "parcel src/index.html --dist-dir dist"
     },
@@ -17,6 +18,7 @@
         "@parcel/packager-raw-url": "^2.14.4",
         "@parcel/transformer-jsonld": "^2.14.4",
         "parcel": "^2.14.4",
+        "rimraf": "^6.0.1",
         "svgo": "^3.3.2"
     },
     "bugs": {
