--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@parcel/transformer-jsonld": "^2.14.4",
         "parcel": "^2.14.4",
         "rimraf": "^6.0.1",
+        "sharp": "^0.33.5",
         "svgo": "^3.3.2"
     },
     "bugs": {
